hphp/hack/test/typecheck/typedef/new_using_tuple_typedef.php.exp
File "new_using_tuple_typedef.php", line 6, characters 12-12:
Expected a `class` but got a type alias. (Naming[2052])
File "new_using_tuple_typedef.php", line 3, characters 9-9:
Alias definition is here.
