hphp/hack/test/typecheck/typedef/new_using_tuple_typedef.php
<?hh

newtype T = (int, float);

function f(): void {
  $f = new T(42);
}
